# money_app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  proxauth-config.yaml  run.sh
backend/: Cargo.toml  Dockerfile  endpoints.go  endpoints_other.go  endpoints_other_getters.go  endpoints_other_helpers.go  endpoints_transactions.go  go.mod  main.go
backend/config/: config.go
backend/data/: data.go  data_test.go  userData.go
backend/event/: event.go
backend/helper/: endpoint_helper.go  mime.go  os.go  string.go  string_test.go
backend/history/: history.go
backend/import_transactions/: barclays.go  barclays_test.go  import.go  import_test.go  n26.go  n26_test.go  parse_amount.go  parse_amount_test.go  split_csv.go  split_csv_test.go
backend/pod/: pod.go
backend/series/: diff.go  diff_test.go  gen_acc.go  gen_acc_test.go  time.go  time_test.go
backend/src/: error.rs  main.rs  rest.rs  serde_custom.rs  settings.rs
backend/src/attachment/: attachment.rs  mod.rs  rest.rs
backend/src/contract/: contract.rs  mod.rs  rest.rs
backend/src/extrapolation/: extrapolation.rs  iter_date.rs  mod.rs  query_params.rs  rest.rs
backend/src/goal/: goal.rs  mod.rs  rest.rs  savings_rate.rs
backend/src/history/: history.rs  iter_associated_types.rs  iter_date.rs  iter_transactions.rs  iter_wealth.rs  mod.rs  query_params.rs  rest.rs  value_diff.rs  wealth.rs
backend/src/import/: barclays.rs  import.rs  mod.rs  n26.rs  n26new.rs  rest.rs
backend/src/transaction/: filter.rs  mod.rs  query_params.rs  rest.rs  transaction.rs
backend/transaction/: filter.go  lint.go  transaction.go
frontend/: Cargo.toml  Dockerfile  index.html  manifest.json  nginx.conf  package-lock.json  package.json
frontend/src/: app.html  main.rs
frontend/src/charts/: mod.rs  monthly_extrapolation.rs  wealth_history.rs
frontend/src/components/: list_item.css  mod.rs
frontend/src/pages/: budgets.css  budgets.rs  contract.css  contract.rs  contracts.css  contracts.rs  dashboard.rs  debts.rs  goal.css  goal.rs  goals.rs  mod.rs  pods.rs  transaction.css  transaction.rs  transactions.css  transactions.rs
frontend/src/routes/: +layout.svelte  +page.js
frontend/src/tmp_fancy_yew/: card.rs  date_input.rs  list_item.css  list_item.rs  mod.rs  string_input.rs
frontend/static/: global.css  manifest.json
frontend2/: Cargo.toml  index.html
frontend2/src/: main.rs
frontend2/src/pages/: contracts.rs  dashboard.rs  mod.rs
money_app/money_app_backend/: Cargo.toml
money_app/money_app_backend/src/: error.rs  main.rs  rest.rs  transaction.rs
shared/: Cargo.toml
shared/src/: attachment.rs  contract.rs  exploration_item.rs  extrapolation.rs  goal.rs  history.rs  lib.rs  transaction.rs
shared/src/history/: associated_type_values.rs  mod.rs  wealth.rs
shared/src/history2/: mod.rs  value_diff.rs  wealth.rs
shared/src/itertools/: cluster_iterator.rs  date_iterator.rs  mod.rs  (+1 more)
(+114 files in other folders)
