[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy_surreal = { path = "../../fancy_surreal" }
money_app_shared = { path = "../shared", features = ["backend"] }
actix-files = "0.6.6"
actix-web = "4.9.0"
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
csv = "1.3.0"
