[package]
name = "money_app_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
fancy_yew = { path = "../../fancy_yew" }
money_app_shared = { path = "../shared" }
gloo = "0.11.0"
wasm-bindgen = "0.2.95"
yew = {version = "0.21.0", features = ["csr"]}
stylist = { version = "0.13.0", features = ["yew_integration", "parser"] }
web-sys = "0.3.72"
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.45"
chrono = "0.4.38"
js-sys = "0.3.72"
serde = { version = "1.0.214", features = ["derive"] }
url = "2.5.3"
