[package]
name = "frontend2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
wasm-bindgen = "0.2.89"
yew = {version = "0.21.0", features = ["csr"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.108"
stylist = { version = "0.13.0", features = ["yew_integration", "parser"] }
web-sys = "0.3.66"
yew-router = "0.18.0"
fancy_yew = { path = "../../fancy_yew" }
