[package]
name = "money_app_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
fancy_surreal = { path = "../../fancy_surreal", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["chrono"] }
chrono = "0.4.31"
mime_guess = "2.0.4"

[features]
backend = ["fancy_surreal"]
